# Tensors

./: CMakeLists.txt  Readme.md  setup_dev_env_sh
cmake/: options.cmake
src/: math.hpp  ops.hpp  tensor.hpp  validation.hpp
tests/: CMakeLists.txt  tests.cpp
tests/correctness/: ops_test.hpp
tests/performance/: bench.hpp  bench_attention.hpp  bench_multiply.hpp
